# Critical-Ops-ESP-Base

./: CMakeLists.txt  README.md
include/onyx/core/: camera_system.hpp  esp_manager.hpp
include/onyx/il2cpp/: api.hpp  collection.hpp
include/onyx/render/: renderer.hpp
include/onyx/sdk/: character.hpp  character_model.hpp  game_system.hpp  gameplay_module.hpp  offsets.hpp
include/onyx/utils/: memory.hpp
src/: main.cpp
src/core/: camera_system.cpp  esp_manager.cpp
src/il2cpp/: api.cpp
src/render/: renderer.cpp
